[package]
name = "im-rc"
version = "15.0.0"
authors = ["Bodil Stokke <bodil@bodil.org>"]
edition = "2018"
license = "MPL-2.0+"
description = "Immutable collection datatypes"
repository = "https://github.com/bodil/im-rs"
documentation = "http://immutable.rs/"
homepage = "http://immutable.rs/"
readme = "./README.md"
categories = ["data-structures"]
keywords = ["immutable", "persistent", "hamt", "b-tree", "rrb-tree"]
build = "./build.rs"
exclude = [
    "dist/**",
    "release.toml",
    "Makefile.toml",
    "proptest-regressions/**"
]

[package.metadata.docs.rs]
all-features = true

[lib]
path = "./src/lib.rs"

[badges]
travis-ci = { repository = "bodil/im-rs" }

[build-dependencies]
version_check = "0.9"

[features]
debug = []

[dependencies]
typenum = "1.12"
bitmaps = { version = "2.1", default-features = false }
sized-chunks = { git = "https://github.com/EmisonLu/sized-chunks.git" }
rand_core = { git = "https://github.com/mesalock-linux/rand-sgx.git" }
# rand_xoshiro = "0.4"
quickcheck = { version = "0.9", optional = true }
proptest = { version = "0.9", optional = true }
serde = { version = "1", optional = true }
rayon = { version = "1", optional = true }
refpool = { version = "0.4", optional = true }
arbitrary = { version = "0.4", optional = true }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { version = "1.0", rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features=["untrusted_fs","thread", "backtrace"] }

[dev-dependencies]
proptest = "0.9"
serde = "1"
serde_json = "1"
rayon = "1"
rand = { version = "0.7", features = ["small_rng"] }
pretty_assertions = "0.6"
metrohash = "1"
proptest-derive = "0.1"
